Work on algorithm, ger time showing up

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,11 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="popup.js"></script>
+
   <title>Document</title>
 </head>
 <body>
   <h1>hello</h1>
-  
+  <form id="menu" action="">
+    <input type="button" id="submit-start" value="start">
+    <input type="button" id ="submit-end" value="end">
+    <input type="button" id ="submit-res" value="restart">
+  </form>
+  <div id="time-spent">0</div>
+
+  <script src="popup.js"></script>
 </body>
 </html>
