--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,11 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="popup.css">
   <script src="popup.js"></script>
-  <title>Document</title>
+  <title>Planktonmeter</title>
 </head>
 <body>
-  <h1>hello</h1>
-  
+  <h1>Welcome to Planktonmeter</h1>
+  <form action="" id="menu">
+    <input type="button" id="submit-start">
+    <input type="button" id="submit-end">
+    <input type="button" id="submit-res">
+  </form>
+  <div id="time-spent">0</div>
 </body>
 </html>
