--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,24 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<<<<<<< HEAD
-  <link rel="stylesheet" href="popup.css">
-  <script src="popup.js"></script>
-  <title>Planktonmeter</title>
-</head>
-<body>
-  <h1>Welcome to Planktonmeter</h1>
-  <form action="" id="menu">
-    <input type="button" id="submit-start">
-    <input type="button" id="submit-end">
-    <input type="button" id="submit-res">
-  </form>
-  <div id="time-spent">0</div>
-=======
-
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
   <title>Document</title>
 </head>
 <body>
+  <div class="card-panel teal lighten-2">
   <h1>hello</h1>
   <form id="menu" action="">
     <input type="button" id="submit-start" value="start">
@@ -29,8 +19,9 @@
     <input type="button" id ="submit-res" value="restart">
   </form>
   <div id="time-spent">0</div>
-
+  </div>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="js/materialize.min.js"></script>
   <script src="popup.js"></script>
->>>>>>> 327b52218fcdb1206d48199cd39708eeb6717876
 </body>
 </html>
