Gets urls for all open tabs and puts tab related data into array for each tab

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+  <link rel="stylesheet" href="popup.css">
   <title>Document</title>
 </head>
 <body>
-  <h1>hello</h1>
-  <form id="menu" action="">
-    <input type="button" id="submit-start" value="start">
-    <input type="button" id ="submit-end" value="end">
-    <input type="button" id ="submit-res" value="restart">
-  </form>
-  <div id="time-spent">0</div>
+  <div id="menu" action="">
+    <div class="button" id="submit-start">Start</div>
+    <div class="button" id ="submit-end">End</div>
+    <div class="button" id ="submit-res">Restart</div>
+  </div>
+  <div id="time-spent">
+  </div>
 
   <script src="popup.js"></script>
 </body>
