--- a/popup/popup.html
+++ b/popup/popup.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <div id="menu" action="">
-    <div class="button" id="submit-start">Start</div>
-    <div class="button" id ="submit-review"><a target='_blank' href='newtab.html'>Review</a></div>
+    <button class="button" id="submit-start"><a href="#">Start</a></button>
+    <button class="button" id ="submit-review"><a target='_blank' href='newtab.html'>Review</a></button>
   </div>
   <div id="time-spent">
   </div>
