--- a/popup/newtab.html
+++ b/popup/newtab.html
@@ -13,7 +13,8 @@
 <body>
 <h1 id="title">Planktometer</h1>
 <div id="description" class="card-panel light-green lighten-2">A productivity extension for your beautiful life.</div>
-<div id="stats" class="card-panel blue lighten-2"></div>
+<div id="stats" class="card-panel blue lighten-2">Time Spend Per Site</div>
+<footer>CBS Production</footer>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 </body>
